--- a/reference/Dashboard.v1.yaml
+++ b/reference/Dashboard.v1.yaml
@@ -1606,5 +1606,137 @@ paths:
           name: Authentication
           description: Bearer token
           required: true
+  '/guest/brazilian/{document}/{spot}':
+    get:
+      summary: Validar hóspede brasileiro
+      tags: []
+      responses:
+        '200':
+          description: É hospede
+        '401':
+          description: Não é hóspede
+      operationId: 'get-guest-brazilian-:document-:spot'
+      parameters:
+        - schema:
+            type: string
+          in: header
+          name: Authorization
+          description: Bearer token
+          required: true
+    parameters:
+      - schema:
+          type: string
+        name: document
+        in: path
+        required: true
+      - schema:
+          type: string
+        name: spot
+        in: path
+        required: true
+  '/guest/foreign/{lastName}/{room}/{spot}':
+    get:
+      summary: Validar hóspede estrangeiro
+      tags: []
+      responses:
+        '200':
+          description: É hospede
+        '401':
+          description: Não é hospede
+      operationId: 'get-guest-foreign-:lastName-:room-:spot'
+      parameters:
+        - schema:
+            type: string
+          in: header
+          name: Authorization
+          description: Bearer token
+          required: true
+    parameters:
+      - schema:
+          type: string
+        name: lastName
+        in: path
+        required: true
+      - schema:
+          type: string
+        name: room
+        in: path
+        required: true
+      - schema:
+          type: string
+        name: spot
+        in: path
+        required: true
+  '/devices/{mac}/client':
+    parameters:
+      - schema:
+          type: string
+        name: mac
+        in: path
+        required: true
+    get:
+      summary: Ver toda informação do MAC
+      tags: []
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  client:
+                    type: object
+                    properties:
+                      id: {}
+                      name:
+                        type: string
+                      email:
+                        type: string
+                      document:
+                        type: string
+                      area_code_id:
+                        type: integer
+                      phone:
+                        type: string
+                      last_room:
+                        type: string
+                      foreign:
+                        type: boolean
+                      hotel_id:
+                        type: integer
+                      created_at:
+                        type: string
+                      updated_at:
+                        type: string
+                      photo:
+                        type: string
+                      hotel:
+                        type: string
+                      info:
+                        type: string
+                      device_id:
+                        type: integer
+                  connections:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        online_until:
+                          type: string
+                        hotel:
+                          type: string
+                        plan:
+                          type: string
+        '404':
+          description: Not Found
+      operationId: get-devices-mac-client
+      parameters:
+        - schema:
+            type: string
+          in: header
+          name: Authorization
+          description: Bearer token
+          required: true
 components:
   schemas: {}
