--- a/reference/Dashboard.v1.yaml
+++ b/reference/Dashboard.v1.yaml
@@ -936,7 +936,7 @@ paths:
           description: Bearer token
           required: true
     put:
-      summary: ''
+      summary: Atualizar evento
       operationId: put-events-id
       responses:
         '200':
@@ -1188,7 +1188,7 @@ paths:
           description: Bearer token
           required: true
     put:
-      summary: ''
+      summary: Atualizar plano
       operationId: put-plans-id
       responses:
         '200':
