--- a/reference/Hotspot.v1.yaml
+++ b/reference/Hotspot.v1.yaml
@@ -11,7 +11,7 @@ info:
   description: ''
 servers:
   - description: Sandbox
-    url: 'https://maxhotspot.uaufi.com'
+    url: 'https://managerstagin.uaufi.com'
 paths:
   '/clients/{mac}/hotspot/{spot}/ip/{ip}':
     get:
