--- a/reference/Dashboard.v1.yaml
+++ b/reference/Dashboard.v1.yaml
@@ -842,7 +842,7 @@ paths:
                       type: string
                     end_at:
                       type: string
-      operationId: get-events-id
+      operationId: get-events
       parameters:
         - schema:
             type: string
