--- a/reference/Dashboard.v1.yaml
+++ b/reference/Dashboard.v1.yaml
@@ -1899,6 +1899,82 @@ paths:
           name: Authentication
           description: Bearer token
           required: true
+  /reports/room/hour:
+    get:
+      summary: Relatório de conexões no quarto por hora
+      tags: []
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    online_until:
+                      type: string
+                    plan:
+                      type: string
+                    client:
+                      type: string
+                    mac:
+                      type: string
+      operationId: get-reports-room-hour
+      parameters:
+        - schema:
+            type: string
+          in: header
+          name: Authentication
+          description: Bearer token
+          required: true
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                start_date:
+                  type: string
+                start_time:
+                  type: string
+                end_date:
+                  type: string
+                end_time:
+                  type: string
+                room:
+                  type: string
+                hotel_id:
+                  type: integer
+  /reports/marco/civil:
+    post:
+      summary: Notificar solicitação marco civil
+      operationId: post-reports-marco-civil
+      responses:
+        '204':
+          description: No Content
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                start_date:
+                  type: string
+                start_time:
+                  type: string
+                end_date:
+                  type: string
+                end_time:
+                  type: string
+      parameters:
+        - schema:
+            type: string
+          in: header
+          name: Authentication
+          description: Bearer token
+          required: true
 components:
   schemas: {}
   securitySchemes: {}
